--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "holoviews>=1.20.0",
     "jupyter>=1.1.1",
     "pandas>=2.2.3",
+    "pyparsing>=3.2.0",
     "quarto>=0.1.0",
     "requests>=2.32.3",
     "ruff>=0.8.4",
