--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -13,8 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Install pandoc
-        uses: pandoc/actions/setup@v1
+      - uses: quarto-dev/quarto-actions/setup@v2
 
       - name: Install uv
         uses: astral-sh/setup-uv@v5
